# GAMOS

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md
GamosCore/GamosBase/: CMakeLists.txt
GamosCore/GamosBase/Base/: CMakeLists.txt  GNUmakefile  sources.cmake
GamosCore/GamosBase/Filters/: CMakeLists.txt  sources.cmake
GamosCore/GamosPhysics/: CMakeLists.txt
GamosCore/GamosPhysics/Cuts/: CMakeLists.txt  GNUmakefile  sources.cmake
GamosCore/GamosPhysics/OtherPhysicsLists/: GNUmakefile  sources.cmake
GamosCore/GamosPhysics/PhysicsList/: CMakeLists.txt
GamosCore/GamosPhysics/VarianceReduction/: CMakeLists.txt  sources.cmake
analysis/: CMakeLists.txt  GNUmakefile  sources.cmake
analysis/AnalyseOutput/: AnalyseOutput.cc  CMakeLists.txt  GNUmakefile  analyseOutput.cc  sources.cmake
analysis/AnalyseOutput/include/: GmAOData.hh  GmAODataSearch.hh  GmAOParam.hh
analysis/AnalyseOutput/src/: GmAOData.cc  GmAODataSearch.cc
analysis/DICOM/: CMakeLists.txt  GNUmakefile  sources.cmake
analysis/DICOM/DICOM2G4/: CMakeLists.txt  DICOM2G4.cc  GNUmakefile  sources.cmake
analysis/DICOM/GamosToDICOM/: CMakeLists.txt  GNUmakefile  GamosToDICOM.cc  sources.cmake
analysis/DICOM/buildPartialDICOM/: buildPartial_G4Volume.in  buildPartial_userVolume.in  phantom.g4pdcm  world.geom
analysis/DICOM/changeStructure/: CMakeLists.txt  GNUmakefile  changeStructure.cc  sources.cmake
analysis/DICOM/dcmdump/: CMakeLists.txt  GNUmakefile  dcmdump.cc  sources.cmake
analysis/DICOM/drawDICOM/: GNUmakefile  drawDICOM.cc  sources.cmake
analysis/DICOM/drawDICOM2/: CMakeLists.txt  GNUmakefile  drawDICOM2.cc  sources.cmake  testPalette.C
analysis/DICOM/fmjpeg2koj/: CMakeLists.txt  GNUmakefile  sources.cmake
analysis/DICOM/getGammaIndex/: CMakeLists.txt  GNUmakefile  getGammaIndex.cc  sources.cmake
analysis/DICOM/getOrganInfo/: CMakeLists.txt  GNUmakefile  getOrganInfo.cc  plotOrganInfo.C  sources.cmake
analysis/DICOM/printValueAlongLine/: CMakeLists.txt  GNUmakefile  printValueAlongLine.cc  sources.cmake
analysis/DICOM/printValueAtPoint/: CMakeLists.txt  GNUmakefile  printValueAtPoint.cc  sources.cmake
analysis/DICOM/resizeImage/: CMakeLists.txt  GNUmakefile  resizeImage.cc  sources.cmake
analysis/DICOM/softenImage/: GNUmakefile  ROOTUtilities  softenImage.cc  sources.cmake
analysis/DICOM/sqdoseToRTDose/: GNUmakefile  sqdoseToRTDose.cc
analysis/NuclMed/: CMakeLists.txt  GNUmakefile  sources.cmake
analysis/NuclMed/PET/: CMakeLists.txt  GNUmakefile  sources.cmake
analysis/NuclMed/SOE/: CMakeLists.txt  GNUmakefile  SOE_ImageRecon.cc  SOE_RotateFOV.cc  SOE_TestCode.cc  ir_soe_userparameters.conf  ir_soe_userparameters.conf_WithRR  sources.cmake
analysis/NuclMed/SPECT/: CMakeLists.txt  GNUmakefile  analyseSPECT.cc  sources.cmake
analysis/NuclMed/sqdoseToInterfile/: CMakeLists.txt  GNUmakefile  sources.cmake  sqdoseToInterfile.cc
analysis/ROOTUtilities/: CMakeLists.txt  GNUmakefile  GenUtils.C  GetValue.C  GetWordsInLine.C  HistosCSV2ROOT.C  ROOT2TXT.C  Verbosity.C  columnToPlot.C  columns2ToPlot.C  compare2.C  compareAll.C  compareN.C  divideAll.C  makePlot1Column.C  makePlot2DLabels.C  printAll.C  printInfo.C  sources.cmake
analysis/ROOTUtilities/Activation/: IsotActivation.cc  IsotActivation.hh  plotActivation.C  readElementZ.C  readExemption.C
analysis/ROOTUtilities/PlotData/: CompareHistos.C  CompareStats.C  Definitions.C  DrawHisto.C  PlotUtils.C
analysis/ROOTUtilities/ghadd/: CMakeLists.txt  GNUmakefile  ghadd.cc  sources.cmake
analysis/ROOTUtilities/printAllRoot/: GNUmakefile  printAllRoot.cc
analysis/RTDose/: CMakeLists.txt  GNUmakefile  sources.cmake
analysis/RTDose/3ddoseToSqdose/: 3ddoseToSqdose.cc  CMakeLists.txt  GNUmakefile  sources.cmake
analysis/RTDose/analyseSqdose/: CMakeLists.txt  GNUmakefile  analyseSqdose.cc  dose_analyseSqdose.root  sources.cmake
analysis/RTDose/compareDoses/: CMakeLists.txt  GNUmakefile  compareDoses.cc  sources.cmake
analysis/RTDose/sqdoseTo3ddose/: CMakeLists.txt  GNUmakefile  sources.cmake  sqdoseTo3ddose.cc
analysis/RTDose/sum3ddose/: CMakeLists.txt  GNUmakefile  merge3ddose.cc  sources.cmake  sum3ddose.cc
analysis/RTDose/sumSqdose/: CMakeLists.txt  GNUmakefile  sources.cmake  sumSqdose.cc
analysis/RTDose/sumSqdoseDisp/: .#sumSqdose.cc  GNUmakefile  sources.cmake  sumSqdoseDisp.cc
analysis/RTPhaseSpace/: CMakeLists.txt  GNUmakefile  sources.cmake
analysis/RTPhaseSpace/analysePS/: CMakeLists.txt  GNUmakefile  analysePS.cc  dummy.geom  phaseSpace.root  rt.analysePS.in  sources.cmake
analysis/RTPhaseSpace/analysePS_EGS/: BEAM_PHILIPS_PH_15MV_16MeV_Z52.975.egsphsp1  CMakeLists.txt  GNUmakefile  analysePS_EGS.cc  phaseSpace.root  sources.cmake
analysis/RTPhaseSpace/sumPS/: CMakeLists.txt  GNUmakefile  sources.cmake  sumPS.cc
analysis/Shielding/: CMakeLists.txt  GNUmakefile  sources.cmake
analysis/pythonUtilities/: 3DVector.py  3dVector.py  GetColor.py  GmStepDataHistosUA.exercise4b.Dose.csv  MyHistos.py  MyHistos.v1.py  ThreeVector.py  Vector3D.py  changeColum.py  checkPythonVersion.py  color.lis  compareAll.py  compareAll.py.v1  csvHistoReader.py  csvHistoReader.py.bck  dads  embedding_in_tk_sgskip.py  figNFiles.py  getValueAtPoint.py  hb.py  histBrowser.py  histBrowser.py.test2D  histBrowser.py.v1  histBrowser.py.v2  histBrowser.py.v3  histBrowser.py.v4  myFile.py  openHistoFile.py  plot1Column.py  plotHist2Columns.py  plotNColumn.py  printAllHist.py  printCompHist.py  prodcuts.exercise4a.csv  sumHist.py  test.csv  test1.csv  test2.csv  test3.csv  test3b.csv  (+25 more)
source/: CMakeLists.txt  GNUmakefile  sources.cmake
source/DICOM/: GNUmakefile
source/DNA/: CMakeLists.txt
source/GamosCore/: CMakeLists.txt  GNUmakefile  sources.cmake
source/MagFieldManager/: CMakeLists.txt  GNUmakefile  sources.cmake
source/NuclMed/: CMakeLists.txt  GNUmakefile  sources.cmake
source/RadioTherapy/: CMakeLists.txt  GNUmakefile  sources.cmake
source/SEAL_Foundation/: BuildFile  CMakeLists.txt  GNUmakefile  sources.cmake
source/Shielding/: CMakeLists.txt  GNUmakefile  sources.cmake
(+20075 files in other folders)
