#------------------------------------------------------------------------------
# CMakeLists.txt
# Module : 
# Package: GAMOS.src.
#
# Intermediate level CMakeLists.txt - just process subdirectories
#
#------------------------------------------------------------------------------

add_subdirectory(MagFieldManager)
add_subdirectory(GamosCore)
add_subdirectory(RadioTherapy)
add_subdirectory(Detector)
add_subdirectory(Shielding)


