#------------------------------------------------------------------------------
# Module : .
# Package: 
#
#------------------------------------------------------------------------------
# 
add_subdirectory(SEAL_Foundation)
add_subdirectory(MagFieldManager)
add_subdirectory(GamosCore)
add_subdirectory(RadioTherapy)
add_subdirectory(NuclMed)
add_subdirectory(Shielding)

add_subdirectory(analysis)

#add_subdirectory(examples)
