#------------------------------------------------------------------------------
# 
# Module : GamosCore
# Package: GamosBase
#
#------------------------------------------------------------------------------
add_definitions(-DGamosBase_ALLOC_EXPORT)

add_subdirectory(Base)
add_subdirectory(Classifiers)
add_subdirectory(Filters)
