#------------------------------------------------------------------------------
# Module : DICOM
# Package: DICOM
#
#------------------------------------------------------------------------------
add_subdirectory(DICOM2G4)
add_subdirectory(getOrganInfo)
add_subdirectory(drawDICOM)
add_subdirectory(getGammaIndex)
add_subdirectory(changeStructure)
add_subdirectory(printValueAtPoint)
add_subdirectory(printValueAlongLine)
add_subdirectory(GamosToDICOM)
add_subdirectory(resizeImage)
#add_subdirectory(dcmdump)

