#------------------------------------------------------------------------------
# Module : analysis_Detector
# Package: analysis_Detector
#
#------------------------------------------------------------------------------
#                                                 
add_subdirectory(PET)
#add_subdirectory(SOE)
add_subdirectory(SPECT)

