#------------------------------------------------------------------------------
# Module : RTDose
# Package: RTDose
#
#------------------------------------------------------------------------------
add_subdirectory(3ddoseToSqdose) 
add_subdirectory(analyseSqdose) 
add_subdirectory(compareDoses)
add_subdirectory(sqdoseTo3ddose)
add_subdirectory(sum3ddose) 
add_subdirectory(sumSqdose)
