#------------------------------------------------------------------------------
# Module : Shielding
# Package: Shielding
#
#------------------------------------------------------------------------------
                                   
add_subdirectory(compareScores)          
add_subdirectory(sumActivation)           
add_subdirectory(sumScores)