#------------------------------------------------------------------------------
# Module : GamosCore
# Package: GamosCore
#
#------------------------------------------------------------------------------
#                                                 
add_subdirectory(GamosUtils)
add_subdirectory(GamosBase/Base)
add_subdirectory(GamosUserActionMgr)
add_subdirectory(GamosAnalysis)
add_subdirectory(GamosData/Management)
add_subdirectory(GamosData/Distributions)
add_subdirectory(GamosGeometry)
add_subdirectory(GamosBase/Classifiers)
add_subdirectory(GamosBase/Filters)
add_subdirectory(GamosGenerator)
add_subdirectory(GamosReadDICOM)
add_subdirectory(GamosScoring/Management)
add_subdirectory(GamosSD)
add_subdirectory(GamosData/Data)
add_subdirectory(GamosData/Users)
add_subdirectory(GamosMovement)
add_subdirectory(GamosPhysics)
add_subdirectory(GamosScoring/Scorers)
add_subdirectory(GamosScoring/Printers)
add_subdirectory(GamosScoring/PointDetector)
add_subdirectory(GamosUtilsUA)
add_subdirectory(GamosRunManager)
add_subdirectory(GamosApplication)
