#------------------------------------------------------------------------------
# Module : Detector
# Package: Detector
#
#------------------------------------------------------------------------------
# 
add_subdirectory(Base)
add_subdirectory(PET)
add_subdirectory(SPECT)
add_subdirectory(ComptonCamera)
