#------------------------------------------------------------------------------
# 
# Module : SEAL_Foundation
# Package: SEAL_Foundation
#
#------------------------------------------------------------------------------
add_definitions(-D_ALLOC_EXPORT)
# 
add_subdirectory(SealBase)
add_subdirectory(PluginManager)
