#------------------------------------------------------------------------------
# Module : Detector
# Package: Detector_PET
#
#------------------------------------------------------------------------------
                                    
add_subdirectory(lm2pd)
add_subdirectory(ssrb_fbp)
add_subdirectory(sumProjData)
